# voxplace

./: .gitignore  README.md
voxelplace-client/: app.vue  package.json  tailwind.config.js
voxelplace-client/components/: AdminLogIn.vue  AdminPlacePost.vue  AdminPlaces.vue  AdminTopBar.vue  ArrowButton.vue  Button.vue  IndexTopBar.vue  LogIn.vue  PlacePalette.vue  PlacePost.vue  PlaceTopBar.vue  Places.vue  Profile.vue  ProfileEditor.vue  ProfileTopBar.vue  SearchBar.vue  SignUp.vue  TinyButton.vue  UserPost.vue  VoxelPost.vue  VoxelPreview.vue
voxelplace-client/pages/: admin.vue  profile.vue
voxelplace-client/public/: selected.glb
voxplace/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
voxplace-client/: localhost-key.pem  localhost.pem  package-lock.json  package.json
voxplace-client/components/: AdminPlacePost.vue  AdminPlaces.vue  AdminTopBar.vue  ArrowButton.vue  Button.vue  CloseButton.vue  Comment.vue  CommentButton.vue  EditorPalette.vue  EditorTopBar.vue  IndexTopBar.vue  LogIn.vue  OpenedPost.vue  PlacePalette.vue  PlacePost.vue  PlaceTopBar.vue  Places.vue  Post.vue  Posts.vue  Profile.vue  ProfileEditor.vue  ProfileTopBar.vue  SearchBar.vue  SendButton.vue  SignUp.vue  User.vue  UserVoxel.vue  Users.vue  (+2 more)
voxplace-server/: .gitignore  Cargo.toml  database.db  voxel format.md
voxplace-server/src/: app_state.rs  comment.rs  main.rs  palette.rs  place.rs  post.rs  routes.rs  user.rs  voxel.rs  websocket.rs
voxplace-server/src/database/: comment.rs  db.rs  mod.rs  palette.rs  place.rs  post.rs  user.rs  voxel.rs
voxplacebot/: index.js  package-lock.json  package.json
(+6 files in other folders)
