[package]
name = "voxplace-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
rand = "0.8.5"
rusqlite = "0.29.0"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.100"
