[package]
name = "voxplace-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-ws = "0.3.0"
bcrypt = "0.15.1"
byteorder = "1.5.0"
chrono = "0.4.38"
crossbeam = "0.8.4"
flate2 = "1.0.33"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rusqlite = "0.32.1"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = "1.40.0"
